tests/errors/null_list_element_to_nonnull_assignment.dang
# Null list elements cannot satisfy non-null element annotations
values: [Int!]! = [null]
